--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@
 body {
   background-color: #e6e6fa;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   padding-top: 30px;
-  height: 100vh;
+  min-height: 100vh;
   flex-direction: column;
 }
 
@@ -29,6 +29,17 @@ body {
   margin: auto;
 }
 
+.weight-object {
+  position: absolute;
+  border-radius: 40px;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  font-weight: 600;
+  color: white;
+}
 #start-button {
   margin-top: 24px;
   padding: 12px 24px;
@@ -52,7 +63,8 @@ body {
 }
 
 #game-scene {
-  width: 900px;
+  max-width: 900px;
+  width: 100%;
   height: 450px;
   background-color: #d8bfd8;
   margin-top: 20px;
@@ -61,6 +73,7 @@ body {
   pointer-events: none;
   position: relative;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.35);
+  overflow: hidden;
 }
 
 #ground {
@@ -77,7 +90,8 @@ body {
   left: 50%;
   transform: translateX(-50%);
   bottom: 170px;
-  width: 700px;
+  width: 80%;
+  max-width: 700px;
   height: 16px;
   background-color: #666;
   border-radius: 8px;
@@ -93,4 +107,17 @@ body {
   border-left: 80px solid transparent;
   border-right: 80px solid transparent;
   border-bottom: 150px solid #9370db;
+}
+
+#drop {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 186px;
+  width: 80%;
+  max-width: 700px;
+  height: 265px;
+  background-color: aqua;
+  display: flex;
+  cursor: pointer;
 }
